--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,16 @@
 <optional>true</optional>
 </dependency>
     <dependency>
+        <groupId>com.goldmansachs</groupId>
+        <artifactId>gs-collections</artifactId>
+        <version>5.1.0</version>
+    </dependency>
+    <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>18.0</version>
+    </dependency>
+    <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
         <version>3.0</version>
