--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,31 @@
         <artifactId>log4j</artifactId>
         <version>1.2.17</version>
     </dependency>
+    <dependency>
+        <groupId>com.google.auto.value</groupId>
+        <artifactId>auto-value</artifactId>
+        <version>1.1</version>
+    </dependency>
+    <dependency>
+        <groupId>com.google.dagger</groupId>
+        <artifactId>dagger</artifactId>
+        <version>2.0.1</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-csv</artifactId>
+        <version>1.0</version>
+    </dependency>
+    <dependency>
+        <groupId>com.netflix.rxjava</groupId>
+        <artifactId>rxjava-string</artifactId>
+        <version>0.20.7</version>
+    </dependency>
+    <dependency>
+        <groupId>io.reactivex</groupId>
+        <artifactId>rxjava</artifactId>
+        <version>1.0.10</version>
+    </dependency>
 </dependencies>
     <build>
         <resources>
